# file_star

./: .gitignore  .pylintrc  README.md  build.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  handler.py
core/mods/: filter_logic.py
core/mods/file/: file_mod_logic.py
core/mods/folder/: folder_mod_logic.py
core/mods/search/: __init__.py  search_logic.py
core/subjects/: filters_handler.py  subject.py  subject_creator.py  subjects_iterator.py
file_star/: build.py  main.py
file_star/core/: handler.py
file_star/core/mods/: filter_logic.py
file_star/core/mods/file/: file_mod_logic.py
file_star/core/subjects/: filters_handler.py  filters_iterator.py  subject.py  subject_creator.py  subjects_iterator.py
file_star/gui/: gui.py  gui_handler.py
file_star/gui/widgets/: __init__.py  file_mod_widget.py  folder_mod_widget.py  local_folder_picker.py  search_widget.py
generic_file_cleaner/: main.py
generic_file_cleaner/core/mods/: filter_logic.py
generic_file_cleaner/core/subjects/: filters_handler.py  filters_iterator.py  subject_creator.py  subjects_iterator.py
generic_file_cleaner/gui/: gui.py  gui_handler.py
generic_file_cleaner/gui/widgets/: __init__.py  file_mod_widget.py  folder_mod_widget.py  search_widget.py
gui/: gui.py  gui_handler.py
gui/widgets/: file_mod_widget.py  folder_mod_widget.py  local_folder_picker.py  search_widget.py
src/: main.py
src/core/mods/: filter_logic.py
src/core/subjects/: filters_handler.py  subject_creator.py  subjects_iterator.py
src/gui/: __init__.py  gui.py  gui_handler.py
src/gui/widgets/: __init__.py  file_mod_widget.py  folder_mod_widget.py  search_widget.py
test/: addasd.py  test.py
(+13 files in other folders)
