[tool.poetry]
name = "file_star"
version = "0.1.0"
description = "File* - A web based file manager"
authors = ["melandur <account@qunit.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
nicegui = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"
nuitka = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120
profile = "black"
