[tool.poetry]
name = "file_star"
version = "0.1.0"
description = "File* - A web based file manager"
authors = ["melandur <account@qunit.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
loguru = "^0.7.2"
nicegui = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = "^5.13.2"
nuitka = "^2.4.8"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120
profile = "black"
